fix text overlap issue

--- a/src/assets/css/style-attack.css
+++ b/src/assets/css/style-attack.css
@@ -2263,3 +2263,7 @@ div#sidebars {
 .collapse {
   visibility: visible !important;
 }
+
+* {
+  line-height: normal;
+}
